Fix 1px jump when sidebar links become active

--- a/styles.css
+++ b/styles.css
@@ -131,7 +131,7 @@ NAV MENU LINKS
 ----------------------------------------------
 */
 
-#nav-menu .nav-link:last-child {
+#nav-menu .nav-link {
   border-bottom: 1px solid transparent;
 }
 
